--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
+    "react-player": "^3.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
